Added Navigation bar

--- a/app/views/test/new.erb
+++ b/app/views/test/new.erb
@@ -1,6 +1,7 @@
+<%= render template:"template/navigation_bar.html.erb" %> 
 <h1>
   <%= @user %>
   <%= @info %>
 
-  <%= link_to 'logout', '/test/logout' %>
+  
 </h1>
