--- a/app/views/template/navigation_bar.html.erb
+++ b/app/views/template/navigation_bar.html.erb
@@ -19,7 +19,7 @@
       <li><a href="#">Link</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-         <li ><a href="/test/logout">Logout</a></li>
+         <li ><a href="/home/logout">Logout</a> </li>
       </ul>
     
   </div><!-- /.navbar-collapse -->
