--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,44 @@
   <title>BookSharingApp</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<nav class="navbar navbar-inverse" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">
+      <h3>ShareYourBook</h3>
+    </a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav ">
+      <li><a href="#">Search Book</a> </li>
+      <li><a href="#">Manage Your Books</a></li>
+      <li><a href="#">List All Books</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li ><a href="/home/logout">Logout</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li id="username">Logged in as: <span> <%= session[:cas_user]%> </span> | </li>
+    </ul>
+
+  </div><!-- /.navbar-collapse -->
+</nav>
+
+
 
 <%= yield %>
 
