+Tushar Added functionality for redirecting to new book page after adding a new book

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -37,9 +37,16 @@
   }
 }
 
-
 .navbar-toggle {
   margin-top: 21px;
+}
+
+.content {
+  margin: 0 10px;
+}
+
+.alert {
+  padding: 10px;
 }
 //******************************* Media Queries **************************************//
 
