--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,1 +1,8 @@
+<% if notice %>
+
+<div class='alert alert-success'>
+  <b><%= notice %></b> has been added to your collection.
+</div>
+<% end %>
+
 <%= render 'form' %>
