--- a/app/views/books/_form.erb
+++ b/app/views/books/_form.erb
@@ -27,6 +27,15 @@
 
       <div class='row'>
         <div class="form-group">
+          <%= f.label :author, class: 'col-sm-2 control-label' %>
+          <div class="col-sm-4">
+            <%= f.text_field :author, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+      <div class='row'>
+        <div class="form-group">
           <%= f.label :ISBN, class: 'col-sm-2 control-label' %>
           <div class="col-sm-4">
             <%= f.text_field :isbn, class: 'form-control' %>
@@ -43,15 +52,16 @@
         </div>
       </div>
 
-
       <div class='row'>
         <div class="form-group">
           <%= f.label :description, class: 'col-sm-2 control-label' %>
           <div class="col-sm-4">
-            <%= f.text_field :description, class: 'form-control' %>
+            <%= f.text_area :description, class: 'form-control' %>
           </div>
         </div>
       </div>
+
+
 
       <div class='row'>
         <div class='form-group'>
