+Dhruv Added routes for the current app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,9 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav ">
-      <li><a href="#">Search Book</a> </li>
-      <li><a href="#">Manage Your Books</a></li>
-      <li><a href="#">List All Books</a></li>
+      <li><a href="/search">Search Book</a> </li>
+      <li><a href="/books/own_books">Manage Your Books</a></li>
+      <li><a href="/books">List All Books</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li ><a href="/home/logout">Logout</a></li>
