--- a/app/views/books/index.erb
+++ b/app/views/books/index.erb
@@ -1,2 +1,35 @@
-<h1>List all books here</h1>
+<h1>List of all books:</h1>
 
+<div class='book-blocks'>
+  <% @books.each do |book| %>
+      <div class='col-lg-4 col-md-6 col-sm-6'>
+        <div class='block clearfix'>
+          <div class='row'>
+            <div class='col-lg-6 col-md-6 col-sm-6 col-xs-6'></div>
+            <div class='col-lg-6 col-md-6 col-sm-6 col-xs-6'>
+              <div class='row'>
+                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Title:</label>
+                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.title %></span>
+              </div>
+              <div class='row'>
+                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Author:</label>
+                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.author %></span>
+              </div>
+              <div class='row'>
+                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>ISBN:</label>
+                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.isbn %></span>
+              </div>
+              <div class='row'>
+                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Edition:</label>
+                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.edition %></span>
+              </div>
+              <div class='row'>
+                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Description:</label>
+                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.description %></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  <% end %>
+</div>
