--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -71,6 +71,10 @@ body {
   }
 }
 
+h1 {
+  margin: 0 0 20px;
+}
+
 
 //******************************* Media Queries **************************************//
 
