--- a/app/views/books/own_books.erb
+++ b/app/views/books/own_books.erb
@@ -11,7 +11,11 @@
   </div>
 </div>
 
-
-
-<%= render 'books' %>
+<% if @books.empty? %>
+    <div class='alert alert-info'>
+      No books found.
+    </div>
+<% else %>
+    <%= render 'books' %>
+<% end %>
 
