--- a/app/views/search/_form.erb
+++ b/app/views/search/_form.erb
@@ -2,7 +2,9 @@
     <div class="input-group">
       <input type='text' name='title' class='form-control' placeholder='Search Your Book'/>
       <span class='input-group-addon'>
-        <input type='submit' class='btn btn-primary' value='Search'/>
+        <button type='submit' class='btn btn-primary '>
+          <span class='glyphicon glyphicon-search'></span>
+        </button>
       </span>
     </div>
 <% end %>
