--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,43 +2,83 @@
 <html>
 <head>
   <title>BookSharingApp</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<nav class="navbar navbar-inverse" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
+<div class='header row'>
+  <div class='logo col-lg-4 col-md-4'></div>
+  <div class='search-form col-lg-offset-2 col-lg-4 col-md-offset-2 col-md-4'>
+    <%= form_tag search_index_path, :method => 'get' do %>
+        <div class="input-group">
+          <input type='text' name='title' class='form-control' placeholder='Search Your Book'/>
+          <span class='input-group-addon'>
+            <button type='submit' class='btn btn-primary '>
+              <span class='glyphicon glyphicon-search'></span>
+            </button>
+          </span>
+        </div>
+    <% end %>
+  </div>
+</div>
 
+<nav class="navbar navbar-default" role="navigation">
+  <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">
-      <h3>ShareYourBook</h3>
-    </a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav ">
-      <li><a href="/search">Search Book</a> </li>
-      <li><a href="/books/own_books">Manage Your Books</a></li>
-      <li><a href="/books">List All Books</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li ><a href="/home/logout">Logout</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li id="username">Logged in as: <span> <%= session[:cas_user]%> </span> | </li>
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li>
+        <a href="/books/own_books">All Books
+          <span class='icon glyphicon glyphicon-retweet'></span>
+        </a>
+      </li>
+      <li>
+        <a href="#">Shared
+          <span class='icon glyphicon glyphicon-resize-full'></span>
+        </a>
+      </li>
+      <li>
+        <a href="#">Borrowed
+          <span class='icon glyphicon glyphicon glyphicon-resize-small'></span>
+        </a>
+      </li>
+      <li>
+        <a href="/books/new">Add New Book
+          <span class='icon glyphicon glyphicon-plus'></span>
+        </a>
+      </li>
     </ul>
 
-  </div><!-- /.navbar-collapse -->
+    <ul class="nav navbar-nav navbar-right">
+      <li>
+        <a href="#">Home
+          <span class='icon glyphicon glyphicon-home'></span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <%= session[:cas_user] %>
+          <span class='icon glyphicon glyphicon-user'></span>
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Logout</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <!-- /.navbar-collapse -->
 </nav>
 
 
