--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -13,7 +13,7 @@
   border: 1px solid #CCCCCC;
   border-radius: 4px;
   padding: 15px;
-
+  margin: 15px 0;
   span {
     word-wrap: break-word;
   }
