--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -2,3 +2,15 @@
   color: red;
   padding-left: 0px;
 }
+
+.form-horizontal {
+  padding-top: 10px;
+}
+
+.form-group {
+  margin-bottom: 25px;
+}
+
+textarea.form-control {
+  height: 100px;
+}
