--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -1,35 +1,27 @@
 <div class='book-blocks clearfix'>
   <% @books.each do |book| %>
-      <div class='col-lg-4 col-md-6 col-sm-6'>
+      <div class='col-lg-3 col-md-4 col-sm-6'>
         <div class='block'>
+          <div class='image'></div>
           <div class='row'>
-            <div class='col-lg-6 col-md-6 col-sm-6 col-xs-6'></div>
-            <div class='col-lg-6 col-md-6 col-sm-6 col-xs-6'>
-              <div class='row'>
-                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Title:</label>
-                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.title %></span>
-              </div>
-              <div class='row'>
-                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Author:</label>
-                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.author %></span>
-              </div>
-              <div class='row'>
-                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>ISBN:</label>
-                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.isbn %></span>
-              </div>
-              <div class='row'>
-                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Edition:</label>
-                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.edition %></span>
-              </div>
-              <div class='row'>
-                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Description:</label>
-                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.description %></span>
-              </div>
-              <div class='row'>
-                <label class='col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>Owner:</label>
-                <span class='col-lg-6 col-md-6 col-sm-6 col-xs-6'><%= book.owners.map { |e| e.name }.join ', ' %></span>
-              </div>
-            </div>
+            <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Title:</label>
+            <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.title %></span>
+          </div>
+          <div class='row'>
+            <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Author:</label>
+            <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.author %></span>
+          </div>
+          <div class='row'>
+            <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>ISBN:</label>
+            <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.isbn %></span>
+          </div>
+          <div class='row'>
+            <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Edition:</label>
+            <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.edition %></span>
+          </div>
+          <div class='row'>
+            <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Owner:</label>
+            <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.owners.map { |e| e.name }.join ', ' %></span>
           </div>
         </div>
       </div>
