--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
 
 <div class='header row'>
   <div class='logo col-lg-4 col-md-4'></div>
-  <div class='search-form col-lg-offset-2 col-lg-4 col-md-offset-2 col-md-4'>
-    <%= form_tag search_index_path, :method => 'get' do %>
+  <div class='col-lg-offset-2 col-lg-4 col-md-offset-2 col-md-4'>
+    <%= form_tag search_index_path, class: 'search-form', method: 'get' do %>
         <div class="input-group">
-          <input type='text' name='title' class='form-control' placeholder='Search Your Book'/>
+          <input type='text' name='title' class='form-control search-box' placeholder='Search Your Book' />
           <span class='input-group-addon'>
             <button type='submit' class='btn'>
               <span class='glyphicon glyphicon-search'></span>
@@ -81,7 +81,6 @@
       </li>
     </ul>
   </div>
-  <!-- /.navbar-collapse -->
 </nav>
 
 
