--- a/app/views/search/_form.erb
+++ b/app/views/search/_form.erb
@@ -1,6 +1,6 @@
 <%= form_tag search_index_path, :method => 'get' do %>
     <div class="input-group">
-      <input type='text' name='title' class='form-control' placeholder='Search Your Book'/>
+      <input type='text' name='title' class='form-control search-box' placeholder='Search Your Book'/>
       <span class='input-group-addon'>
         <button type='submit' class='btn btn-primary '>
           <span class='glyphicon glyphicon-search'></span>
