--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -3,6 +3,10 @@
   padding-left: 0px;
 }
 
+.alert {
+  padding: 8px;
+}
+
 .form-horizontal {
   padding-top: 10px;
 }
@@ -13,4 +17,8 @@
 
 textarea.form-control {
   height: 100px;
+}
+
+.modal-dialog {
+  width: 60%;
 }
