--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -9,8 +9,8 @@
   padding: 6px;
 }
 .block {
-  background: white;
-  border: 1px solid #CCCCCC;
+  background: #fbfbfb;
+  border: 1px solid #d6d6d6;
   border-radius: 4px;
   padding: 15px;
   margin: 15px 0;
