--- a/app/views/books/own_books.erb
+++ b/app/views/books/own_books.erb
@@ -1,15 +1,9 @@
-<div class='row'>
-  <div class='col-lg-4'>
-    <h1> List of your books </h1>
-  </div>
-  <div class='col-lg-8'>
-    <div class='pull-right'>
-      <a href='/books/new'>
-        <button class='btn btn-primary'>Share Another Book</button>
-      </a>
+<% if notice %>
+
+    <div class='alert alert-success'>
+      <b><%= notice %></b> has been added to your collection.
     </div>
-  </div>
-</div>
+<% end %>
 
 <% if @books.empty? %>
     <div class='alert alert-info'>
@@ -18,4 +12,3 @@
 <% else %>
     <%= render 'books' %>
 <% end %>
-
