--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 <body>
 
 <div class='header row'>
-  <div class='logo col-lg-4 col-md-4'></div>
+  <div class='col-lg-4 col-md-4'>
+    <div class='logo'></div>
+  </div>
   <div class='col-lg-offset-2 col-lg-4 col-md-offset-2 col-md-4'>
     <%= form_tag search_index_path, class: 'search-form', method: 'get' do %>
         <div class="input-group">
@@ -46,21 +48,21 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="">
           <sup class='icon glyphicon glyphicon-resize-full'></sup>
           Shared
           <sup class='count count-shared-books'>100</sup>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="">
           <span class='icon glyphicon glyphicon glyphicon-resize-small'></span>
           Borrowed
           <sup class='count count-borrowed-books'>100</sup>
         </a>
       </li>
       <li>
-        <a href="/books/new">
+        <a href="" data-toggle='modal' data-target='#addBookModal'>
           <span class='icon glyphicon glyphicon-plus'></span>
           Add New Book
         </a>
@@ -83,6 +85,7 @@
   </div>
 </nav>
 
+<%= render 'books/form' %>
 
 <div class='content'>
   <%= yield %>
