--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -13,22 +13,22 @@ body {
 .header {
   padding: 10px;
   .logo {
-    background: url("logo.png") no-repeat;
-    height: 40px;
+    background: url("booksharelogo.png") no-repeat;
+    height: 55px;
     background-size: contain;
   }
 }
 
 .search-form {
-  padding-top: 1px;
+  padding-top: 10px;
   padding-left: 10px;
 }
 
 .navbar-default {
-  background: -webkit-linear-gradient(top, darkgray, gray);
+  background: -webkit-linear-gradient(top, lightgray, darkgray);
   background: -moz-linear-gradient(top, darkgray, gray);
   border: 2px solid gray;
-  margin: 0 10px 20px;
+  margin: 0 10px 10px;
 
   .navbar-nav > li > a {
     color: white;
@@ -54,12 +54,10 @@ body {
   background: #c8232e;
 }
 
-.navbar li:hover{
+.navbar-default .navbar-nav > li > a:hover {
+  color: rgb(96, 96, 96);
   sup {
-    color: black;
-  }
-  a {
-    color: black;
+    color: rgb(96, 96, 96);
   }
 }
 
@@ -69,12 +67,12 @@ body {
 }
 
 .input-group {
-  .input-group-addon{
+  .input-group-addon {
     padding: 0;
     vertical-align: 0;
   }
   .btn {
-    background: gray;
+    background: darkgray;
     border-radius: 0;
   }
   .glyphicon-search {
@@ -82,18 +80,20 @@ body {
   }
 }
 
-
 .icon {
   padding-right: 20px;
 }
 
+.footer {
+  text-align: center;
+  padding: 10px 0px;
+}
 
 //******************************* Common fetch it some other file **************************************//
 
 h1 {
   margin: 0 0 20px;
 }
-
 
 //******************************* Media Queries **************************************//
 
