--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <div class='col-lg-offset-2 col-lg-4 col-md-offset-2 col-md-4'>
     <%= form_tag search_index_path, class: 'search-form', method: 'get' do %>
         <div class="input-group">
-          <input type='text' name='title' class='form-control search-box' placeholder='Search Your Book' />
+          <input type='text' name='title' class='form-control search-box' placeholder='Search Your Book'/>
           <span class='input-group-addon'>
             <button type='submit' class='btn'>
               <span class='glyphicon glyphicon-search'></span>
@@ -89,6 +89,13 @@
 
 <div class='content'>
   <%= yield %>
+</div>
+
+<div class='row'>
+  <div class="footer">Copyright &copy 2013, <a href="http://www.thoughtworks.com">ThoughtWorks</a>, Inc. All rights
+    reserved.
+  </div>
+</div>
 </div>
 
 
