--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -71,14 +71,26 @@ body {
     padding: 0;
     vertical-align: 0;
   }
+  .input-group-btn:first-child > .btn {
+    padding: 6px 20px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    outline: none;
+  }
   .btn {
     background: darkgray;
     border-radius: 0;
+    color: #ffffff;
+    border: 1px solid transparent;
   }
-  .glyphicon-search {
-    color: white;
+  #filter > li {
+    cursor: pointer;
+  }
+  #selected_value {
+    padding-right: 5px;
   }
 }
+
 
 .icon {
   padding-right: 20px;
@@ -86,7 +98,7 @@ body {
 
 .footer {
   text-align: center;
-  padding: 10px 0px;
+  bottom: 0;
 }
 
 //******************************* Common fetch it some other file **************************************//
