--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -5,9 +5,16 @@
   margin-bottom: 10px;
 }
 
-.book-blocks > .col-lg-4 {
-  padding: 6px;
+.book-blocks {
+
+  > .col-lg-4 {
+    padding: 6px;
+  }
+
+  margin: 0 auto;
+  width: 90%;
 }
+
 .block {
   background: #fbfbfb;
   border: 1px solid #d6d6d6;
