--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -82,6 +82,7 @@ body {
     border-radius: 0;
     color: #ffffff;
     border: 1px solid transparent;
+    outline: none;
   }
   #filter > li {
     cursor: pointer;
