+Dhruv refactored own_books method of books_controller, now only one placecard is displayed even if there are  multiple copies of same book

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
         <a href="/books/own_books">
           <span class='icon glyphicon glyphicon-retweet'></span>
           All Books
-          <sup class='count count-own-books'>100</sup>
+          <sup class='count count-own-books'><%= @number %></sup>
         </a>
       </li>
       <li>
