--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -22,3 +22,21 @@ textarea.form-control {
 .modal-dialog {
   width: 60%;
 }
+
+.loader {
+  background: url("loader.gif") no-repeat;
+  background-size: contain;
+  padding-left: 28px;
+}
+
+#new_book {
+
+  .alert {
+    display: none;
+  }
+  .errors {
+    color: #a94442;
+    padding-left: 5px;
+    padding-top: 5px;
+  }
+}
