--- a/app/views/books/own_books.erb
+++ b/app/views/books/own_books.erb
@@ -1,5 +1,4 @@
 <% if notice %>
-
     <div class='alert alert-success'>
       <b><%= notice %></b> has been added to your collection.
     </div>
@@ -32,8 +31,8 @@
                 <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.edition %></span>
               </div>
               <div class='row'>
-                <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>No of Copies:</label>
-                <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= @copies[book.isbn]  %></span>
+                <label class='col-lg-offset-2 col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>No of Copies:</label>
+                <span class='col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= @copies[book.isbn]  %></span>
               </div>
             </div>
           </div>
