--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,12 @@
              <span class="caret"></span>
            </button>
            <ul class='dropdown-menu' id="filter">
-             <li><a>Title</a></li>
-             <li><a>Author</a></li>
-             <li><a>Isbn</a></li>
+             <li><a>title</a></li>
+             <li><a>author</a></li>
+             <li><a>isbn</a></li>
            </ul>
         </span>
+          <input type="hidden" value="title" name="filter" id="filter_by" />
           <input type='text' name='title' class='form-control' id='search_box' placeholder='Search Your Book By Title'/>
         <span class='input-group-addon'>
           <button type='submit' class='btn'>
