--- a/app/views/books/_form.erb
+++ b/app/views/books/_form.erb
@@ -17,58 +17,63 @@
 
             <div class='form-horizontal'>
               <div class='row'>
-                <div class='form-group'>
+                <div class="col-lg-8">
+                  <div class='form-group'>
 
-                  <%= f.label :isbn, class: 'col-sm-offset-1 col-sm-1 control-label' %>
-                  <div class='col-sm-3'>
-                    <%= f.text_field :isbn, class: 'form-control', id: 'book_isbn', required: 'true' %>
-                    <div class='errors isbn-errors'></div>
+                    <%= f.label :isbn, class: 'col-sm-offset-1 col-sm-1 control-label' %>
+                    <div class='col-sm-4'>
+                      <%= f.text_field :isbn, class: 'form-control', id: 'book_isbn', required: 'true' %>
+                      <div class='errors isbn-errors'></div>
+                    </div>
+
+                    <div class="col-sm-1">
+                      <button type='button' class='btn' id='search_button'>
+                        <span class='glyphicon glyphicon-search'></span>
+                      </button>
+                    </div>
+
+                    <%= f.label :Title, class: 'col-sm-1 control-label' %>
+                    <div class='col-sm-4'>
+                      <%= f.text_field :title, class: 'form-control' %>
+                      <div class='errors title-errors'></div>
+                    </div>
+
                   </div>
 
-                  <div class="col-sm-1">
-                    <button type='button' class='btn' id='search_button'>
-                      <span class='glyphicon glyphicon-search'></span>
-                    </button>
+                  <div class='row'>
+                    <div class='form-group'>
+
+                      <%= f.label :author, class: 'col-sm-offset-1 col-sm-1 control-label' %>
+                      <div class='col-sm-4'>
+                        <%= f.text_field :author, class: 'form-control' %>
+                        <div class='errors author-errors'></div>
+                      </div>
+
+                      <%= f.label :edition, class: 'col-sm-2 control-label' %>
+                      <div class='col-sm-4'>
+                        <%= f.text_field :edition, class: 'form-control' %>
+                        <div class='errors edition-errors'></div>
+                      </div>
+
+                    </div>
                   </div>
 
-                  <%= f.label :Title, class: 'col-sm-1 control-label' %>
-                  <div class='col-sm-3'>
-                    <%= f.text_field :title, class: 'form-control' %>
-                    <div class='errors title-errors'></div>
-                  </div>
 
+                  <div class='row'>
+                    <div class='form-group'>
+                      <%= f.label :description, class: 'col-sm-2 control-label' %>
+                      <div class='col-sm-8'>
+                        <%= f.text_area :description, class: 'form-control' %>
+                        <div class='errors description-errors'></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4">
+                  <img id="book_image" src=""/>
                 </div>
               </div>
-
-              <div class='row'>
-                <div class='form-group'>
-
-                  <%= f.label :author, class: 'col-sm-2 control-label' %>
-                  <div class='col-sm-3'>
-                    <%= f.text_field :author, class: 'form-control' %>
-                    <div class='errors author-errors'></div>
-                  </div>
-
-                  <%= f.label :edition, class: 'col-sm-2 control-label' %>
-                  <div class='col-sm-3'>
-                    <%= f.text_field :edition, class: 'form-control' %>
-                    <div class='errors edition-errors'></div>
-                  </div>
-
-                </div>
-              </div>
-
-
-              <div class='row'>
-                <div class='form-group'>
-                  <%= f.label :description, class: 'col-sm-2 control-label' %>
-                  <div class='col-sm-8'>
-                    <%= f.text_area :description, class: 'form-control' %>
-                    <div class='errors description-errors'></div>
-                  </div>
-                </div>
-              </div>
-
             </div>
           </div>
 
