--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -2,7 +2,9 @@
   <% @books.each do |book| %>
       <div class='col-lg-3 col-md-4 col-sm-6'>
         <div class='block'>
-          <div class='image'></div>
+          <div class='image'>
+            <img src= "<%= book.image_url %>" />
+          </div>
           <div class='row'>
             <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Title:</label>
             <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.title %></span>
