--- a/app/views/books/own_books.erb
+++ b/app/views/books/own_books.erb
@@ -9,42 +9,5 @@
       No books found.
     </div>
 <% else %>
-    <div id="ca-container" class="ca-container">
-      <div class="ca-nav">
-        <span class="ca-nav-prev">Previous</span>
-        <span class="ca-nav-next">Next</span>
-      </div>
-      <div class="ca-wrapper">
-        <% @books.each do |book| %>
-            <div class="ca-item">
-              <!--<div class="block">-->
-              <div class="ca-item-main">
-                <div class='image'></div>
-                <div class='row'>
-                  <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Title:</label>
-                  <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.title %></span>
-                </div>
-                <div class='row'>
-                  <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Author:</label>
-                  <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.author %></span>
-                </div>
-                <div class='row'>
-                  <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>ISBN:</label>
-                  <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.isbn %></span>
-                </div>
-                <div class='row'>
-                  <label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Edition:</label>
-                  <span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.edition %></span>
-                </div>
-                <div class='row'>
-                  <label class='col-lg-offset-2 col-lg-6 col-md-6 col-sm-6 col-xs-6 control-label'>No of
-                    Copies:</label>
-                  <span class='col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= @copies[book.isbn] %></span>
-                </div>
-              </div>
-
-            </div>
-        <% end %>
-      </div>
-    </div>
+    <%= render partial: 'books' %>
 <% end %>
