Started with adding the lender a book. Changed some book flow too

--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -5,6 +5,19 @@
     width: 220px;
     margin-bottom: 10px;
   }
+
+}
+
+.edit-book-icon {
+  position: relative;
+  top: -206px;
+  left: 244px;
+  li {
+    list-style: none;
+    a {
+      color: black;
+    }
+  }
 }
 
 .book-blocks {
