--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -12,13 +12,21 @@
   position: relative;
   top: -206px;
   left: 244px;
-  li {
-    list-style: none;
-    a {
-      color: black;
-    }
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: black;
+
+  &:hover {
+    color: black;
+    text-decoration: none;
   }
 }
+
 
 .book-blocks {
   width: 90%;
