Added book borrower functionality

--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -50,7 +50,7 @@ textarea.form-control {
   overflow: hidden;
 }
 
-#lender_info_modal {
+#borrower_info_modal {
   .form-group {
     margin-bottom: 0;
   }
