--- a/app/views/borrowers/_borrower_info_form.erb
+++ b/app/views/borrowers/_borrower_info_form.erb
@@ -1,12 +1,12 @@
-<div class='modal fade' id='lender_info_modal' tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true'>
+<div class='modal fade' id='borrower_info_modal' tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true'>
   <div class='modal-dialog'>
     <div class='modal-content'>
       <div class='modal-header'>
         <button type='button' class='close' data-dismiss='modal' aria-hidden='true'>&times;</button>
-        <h4 class='modal-title'>Update Lender Information</h4>
+        <h4 class='modal-title'>Update Borrower Information</h4>
       </div>
 
-      <%= form_for @lender, remote: true do |f| %>
+      <%= form_tag({remote: true}, id: 'borrower_info_form') do |f| %>
 
           <div class='modal-body'>
 
@@ -15,32 +15,31 @@
               <div class="loader">Saving</div>
             </div>
             <div class="alert alert-danger">Error during saving of the form</div>
-            
+
             <div class='form-horizontal'>
               <div class='row'>
                 <div class="col-lg-6">
                   <div class='form-group'>
-                    <%= f.label :name, class: 'col-lg-3 control-label' %>
+                    <%= label_tag 'name', nil, class: 'col-lg-3 control-label' %>
                     <div class='col-lg-8'>
-                      <%= f.text_field :name, class: 'form-control' %>
-                      <div class='errors name-errors'></div>
+                      <%= text_field_tag 'name', nil, class: 'form-control' %>
+                      <div class='errors borrower_id-errors'></div>
                     </div>
                   </div>
                 </div>
 
                 <div class="col-lg-6">
                   <div class='form-group'>
-                    <%= f.label :date_of_lending, class: 'col-lg-3 control-label' %>
+                    <%= label_tag 'date_of_borrowing', nil, class: 'col-lg-3 control-label' %>
                     <div class='col-lg-8'>
                       <div class="input-group">
-                        <%= f.text_field :date_of_lending, class: 'form-control' %>
+                        <%= text_field_tag 'date_of_borrowing', nil, class: 'form-control' %>
                         <span class="input-group-addon glyphicon glyphicon-calendar"></span>
                       </div>
-                      <div class='errors date_of_lending-errors'></div>
+                      <div class='errors date_of_borrowing-errors'></div>
                     </div>
                   </div>
                 </div>
-
 
               </div>
             </div>
