--- a/app/views/books/_form.erb
+++ b/app/views/books/_form.erb
@@ -1,4 +1,4 @@
-<div class='modal fade' id='addBookModal' tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true'>
+<div class='modal fade form-modal' id='addBookModal' tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true'>
   <div class='modal-dialog'>
     <div class='modal-content'>
       <div class='modal-header'>
