--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,79 +1,88 @@
 <div class="row">
+  <button class="btn btn-primary pull-right">
+    <a href="#" data-toggle='modal' id="add_new_borrower" class="">+ Add New Borrower</a>
+  </button>
 
-  <input type="hidden" class="book-id" value=<%= @book.id %> >
-  <div class="col-lg-4">
+</div>
+
+<div class="row">
+
+  <input type="hidden" class="book-id" value=<%= @book.id %>>
+
+  <div class="col-lg-3 col-md-4 col-sm-5 image-div ">
     <img src="<%= @book.image_url %>"/>
   </div>
 
-  <div class="col-lg-8">
+  <div class="col-lg-9 col-md-8 col-sm-7">
 
-    <div class="row">
-      <label class="col-lg-3">Title:</label>
+    <div class="row book-info">
+      <label class="col-lg-3 col-md-3 col-sm-3">Title:</label>
 
-      <div class="col-lg-9">
+      <div class="col-lg-9 col-md-9 col-sm-9">
         <%= @book.title %>
       </div>
     </div>
 
-    <div class="row">
-      <label class="col-lg-3">Authors:</label>
+    <div class="row book-info">
+      <label class="col-lg-3 col-md-3 col-sm-3">Authors:</label>
 
-      <div class="col-lg-9">
+      <div class="col-lg-9 col-md-9 col-sm-9">
         <%= @book.author %>
       </div>
     </div>
 
-    <div class="row">
-      <label class="col-lg-3">ISBN:</label>
+    <div class="row book-info">
+      <label class="col-lg-3 col-md-3 col-sm-3">ISBN:</label>
 
-      <div class="col-lg-9">
+      <div class="col-lg-9 col-md-9 col-sm-9">
         <%= @book.isbn %>
       </div>
     </div>
 
-    <div class="row">
-      <label class="col-lg-3">Edition:</label>
+    <div class="row book-info">
+      <label class="col-lg-3 col-md-3 col-sm-3">Edition:</label>
 
-      <div class="col-lg-9">
+      <div class="col-lg-9 col-md-9 col-sm-9">
         <%= @book.edition %>
       </div>
     </div>
 
-    <div class="row">
-      <label class="col-lg-3">Description:</label>
+    <div class="row book-info">
+      <label class="col-lg-3 col-md-3 col-sm-3">Description:</label>
 
-      <div class="col-lg-9">
+      <div class="col-lg-9 col-md-9 col-sm-9">
         <%= @book.description %>
       </div>
     </div>
 
 
-    <div class="row">
-      <label class="col-lg-3">Lent to:</label>
-    </div>
+    <div class="row book-info">
+      <label class="col-lg-3 col-md-3 col-sm-3">Lent to:</label>
 
-    <table class="table">
-      <tr>
-        <th>Name</th>
-        <th>Date of borrowing</th>
-        <th></th>
-      </tr>
-      <tbody>
-      <% @book_borrowers.each do |book_borrower| %>
-          <tr>
-            <td><%= book_borrower.borrower.name %></td>
-            <td><%= book_borrower.date_of_borrowing %></td>
-            <td>
-              <a data-method="delete" href="/borrowers/<%=book_borrower.id%>?book_id=<%=@book.id%>" class="glyphicon glyphicon-trash"></a>
-            </td>
-          </tr>
+      <% if !@book_borrowers.empty? %>
+          <div class="col-lg-9 col-md-9 col-sm-9">
+            <table class="table">
+              <tr>
+                <th>Name</th>
+                <th>Date of borrowing</th>
+                <th></th>
+              </tr>
+              <tbody>
+              <% @book_borrowers.each do |book_borrower| %>
+                  <tr>
+                    <td><%= book_borrower.borrower.name %></td>
+                    <td><%= book_borrower.date_of_borrowing %></td>
+                    <td>
+                      <a data-method="delete" href="/borrowers/<%= book_borrower.id %>?book_id=<%= @book.id %>" class="glyphicon glyphicon-trash"></a>
+                    </td>
+                  </tr>
+              <% end %>
+              </tbody>
+            </table>
+          </div>
       <% end %>
-      </tbody>
-
-    </table>
+    </div>
   </div>
 </div>
-
-<li><a href="#" data-toggle='modal' id="add_new_borrower">Add New Borrower</a></li>
 
 
