Added functionality of showing shared books

--- a/app/views/books/own_books.erb
+++ b/app/views/books/own_books.erb
@@ -4,7 +4,7 @@
     </div>
 <% end %>
 
-<% if @books.empty? %>
+<% if @books.nil? %>
     <div class='alert alert-info'>
       No books found.
     </div>
