--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="/books/shared_books">
           <sup class='icon glyphicon glyphicon-resize-full'></sup>
           Shared
           <sup class='count count-shared-books'>100</sup>
