--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -12,12 +12,14 @@
                 <span class="right-caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><a href="/books/<%=book.id%>"><span class="glyphicon glyphicon-eye-open"></span> View details</a></li>
+                <li><a href="/books/<%= book.id %>"><span class="glyphicon glyphicon-eye-open"></span> View details</a>
+                </li>
               </ul>
             </li>
           </div>
 
-          <input type="hidden" name="hidden_text" />
+          <input type="hidden" name="hidden_text"/>
+
           <div class='row'>
             <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Title:</label>
             <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.title %></span>
@@ -26,22 +28,7 @@
             <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Author:</label>
             <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.author %></span>
           </div>
-          <!--<div class='row'>-->
-            <!--<label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>ISBN:</label>-->
-            <!--<span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.isbn %></span>-->
-          <!--</div>-->
-          <!--<div class='row'>-->
-            <!--<label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Edition:</label>-->
-            <!--<span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.edition %></span>-->
-          <!--</div>-->
-          <!--<div class='row'>-->
-            <!--<label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>Owner:</label>-->
-            <!--<span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= book.users.map { |e| e.name }.join ', ' %></span>-->
-          <!--</div>-->
-          <!--<div class='row'>-->
-            <!--<label class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6 control-label'>No of copies:</label>-->
-            <!--<span class='col-lg-offset-2 col-lg-4 col-md-6 col-sm-6 col-xs-6'><%= @copies[book.isbn] %></span>-->
-          <!--</div>-->
+
         </div>
       </div>
   <% end %>
