Added functionality of showing borrowed books

--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -24,26 +24,29 @@ a {
   }
 }
 
-.right-caret {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: 2px;
-  vertical-align: middle;
-  border-left: 6px solid gray;
-  border-top: 6px solid transparent;
-  border-bottom: 6px solid transparent;
-}
+.block {
 
-.caret {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: 2px;
-  vertical-align: middle;
-  border-top: 6px solid gray;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
+  .right-caret {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 2px;
+    vertical-align: middle;
+    border-left: 6px solid gray;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+  }
+
+  .caret {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 2px;
+    vertical-align: middle;
+    border-top: 6px solid gray;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+  }
 }
 
 .block {
