--- a/app/views/books/own_books.erb
+++ b/app/views/books/own_books.erb
@@ -6,7 +6,7 @@
 
 <% if @books.nil? %>
     <div class='alert alert-info'>
-      No books found.
+      Sorry, You dont have any book.
     </div>
 <% else %>
     <%= render partial: 'books' %>
