--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="/books/borrowed_books">
           <span class='icon glyphicon glyphicon glyphicon-resize-small'></span>
           Borrowed
           <sup class='count count-borrowed-books'>100</sup>
