--- a/app/views/books/borrowed_books.erb
+++ b/app/views/books/borrowed_books.erb
@@ -1,6 +1,6 @@
 <% if @books.empty? %>
     <div class='alert alert-info'>
-      Sorry, You have not shared any book.
+      You should learn something new. Go and borrow some books.
     </div>
 <% else %>
     <%= render partial: 'books' %>
